Fixed with visible border

--- a/frontend/src/pages/room/Room.scss
+++ b/frontend/src/pages/room/Room.scss
@@ -122,7 +122,7 @@
     position: absolute;
     border-radius: 12px;
     overflow: hidden;
-    border: 4px solid transparent;
+    border: 4px solid var(--primary-background);
     transition: transform .5s, opacity .5s, max-width .4s, margin .4s, width .5s, top .5s, left .5s, height .5s;
     background-color: var(--secondary-background);
 
@@ -130,7 +130,7 @@
         border: 4px solid var(--speaking-color) !important;
     }
     &.self-muted {
-        border-color: transparent !important;
+        border-color: var(--primary-background) !important;
     }
 
     &.connecting {
